--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ pages:
     - pip install pandoc-include
     - git submodule update --init
     - cp config/tufte/* .
-    - mv README.md index.md
     - make
+    - mv public/README.html public/index.html
   artifacts:
     paths:
       - public
